# datasette-visible-internal-db

./: README.md  datasette_visible_internal_db.py  pyproject.toml
tests/: test_visible_internal_db.py
